[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/jean28518.jTools/jSettings/JSettings.gd" type="Script" id=1]
[ext_resource path="res://Data/UI/styles/item_list.tres" type="Theme" id=2]
[ext_resource path="res://Data/Fonts/FontMedium.tres" type="DynamicFont" id=3]
[ext_resource path="res://Data/UI/styles/complete_menu.tres" type="Theme" id=4]
[ext_resource path="res://Data/UI/styles/button_left.tres" type="Theme" id=5]

[node name="JSettings" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="JSettings" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
theme = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="JSettings"]
margin_left = 6.0
margin_top = 10.0
margin_right = 994.0
margin_bottom = 572.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="JSettings/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 980.0
margin_bottom = 554.0
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="JSettings/MarginContainer/VBoxContainer"]
margin_right = 972.0
margin_bottom = 493.0
size_flags_vertical = 3
tab_align = 0
use_hidden_tabs_for_min_size = true

[node name="MENU_GENERAL_SETTINGS" type="ScrollContainer" parent="JSettings/MarginContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 63.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GridContainer" type="GridContainer" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS"]
margin_right = 964.0
margin_bottom = 514.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label17" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
margin_right = 475.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 0.501961 )
custom_fonts/font = ExtResource( 3 )
text = "MENU_ACCESSIBILITY_SETTINGS"
valign = 1

[node name="Label18" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
margin_left = 479.0
margin_right = 954.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="LabelLanguage" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
margin_top = 51.0
margin_right = 475.0
margin_bottom = 96.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_LANGUAGE"

[node name="Language" type="OptionButton" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 479.0
margin_top = 49.0
margin_right = 954.0
margin_bottom = 98.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="Label19" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
margin_top = 102.0
margin_right = 475.0
margin_bottom = 147.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 0.501961 )
custom_fonts/font = ExtResource( 3 )
text = "MENU_GAMEPLAY_SETTINGS"
valign = 1

[node name="Label20" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
margin_left = 479.0
margin_top = 102.0
margin_right = 954.0
margin_bottom = 147.0
size_flags_horizontal = 3

[node name="Label11" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
margin_top = 153.0
margin_right = 475.0
margin_bottom = 198.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_PERSONS"

[node name="Persons" type="CheckBox" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 689.0
margin_top = 151.0
margin_right = 743.0
margin_bottom = 200.0
size_flags_horizontal = 4
align = 1

[node name="Label9" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
margin_top = 206.0
margin_right = 475.0
margin_bottom = 251.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_VIEW_DISTANCE"

[node name="ViewDistance" type="SpinBox" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 479.0
margin_top = 204.0
margin_right = 954.0
margin_bottom = 253.0
min_value = 250.0
max_value = 1000.0
value = 1000.0
align = 1

[node name="Label21" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
margin_top = 259.0
margin_right = 475.0
margin_bottom = 304.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_CHUNK_UNLOAD_DISTANCE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChunkUnloadDistance" type="SpinBox" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 479.0
margin_top = 257.0
margin_right = 954.0
margin_bottom = 306.0
min_value = 2.0
max_value = 10.0
value = 2.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label22" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
margin_top = 312.0
margin_right = 475.0
margin_bottom = 357.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_CHUNK_LOAD_ALL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChunkLoadAll" type="CheckBox" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 689.0
margin_top = 310.0
margin_right = 743.0
margin_bottom = 359.0
size_flags_horizontal = 4
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label15" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
margin_top = 363.0
margin_right = 475.0
margin_bottom = 408.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 0.501961 )
custom_fonts/font = ExtResource( 3 )
text = "MENU_DIFFICULTY_SETTINGS"
valign = 1

[node name="Label16" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
margin_left = 479.0
margin_top = 363.0
margin_right = 954.0
margin_bottom = 408.0
size_flags_horizontal = 3

[node name="Label13" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
margin_top = 414.0
margin_right = 475.0
margin_bottom = 459.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_DIFFICULTY_PZB"

[node name="PZB" type="CheckBox" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 689.0
margin_top = 412.0
margin_right = 743.0
margin_bottom = 461.0
size_flags_horizontal = 4
align = 1

[node name="Label14" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
margin_top = 467.0
margin_right = 475.0
margin_bottom = 512.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_DIFFICULTY_SIFA"

[node name="SIFA" type="CheckBox" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 689.0
margin_top = 465.0
margin_right = 743.0
margin_bottom = 514.0
size_flags_horizontal = 4
align = 1

[node name="MENU_VISUAL_SETTINGS" type="ScrollContainer" parent="JSettings/MarginContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 63.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS"]
margin_right = 954.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Label23" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
margin_right = 475.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 0.501961 )
custom_fonts/font = ExtResource( 3 )
text = "MENU_DISPLAY_SETTINGS"
valign = 1

[node name="Label24" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
margin_left = 479.0
margin_right = 954.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
margin_top = 51.0
margin_right = 475.0
margin_bottom = 96.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_FULLSCREEN"

[node name="Fullscreen" type="CheckBox" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 689.0
margin_top = 49.0
margin_right = 743.0
margin_bottom = 98.0
size_flags_horizontal = 4

[node name="Label10" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
margin_top = 104.0
margin_right = 475.0
margin_bottom = 149.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_VSYNC"

[node name="Vsync" type="CheckBox" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 689.0
margin_top = 102.0
margin_right = 743.0
margin_bottom = 151.0
size_flags_horizontal = 4

[node name="LabelFpsLimitToggle" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_top = 157.0
margin_right = 475.0
margin_bottom = 202.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_FPS_LIMIT_TOGGLE"

[node name="FpsLimitToggle" type="CheckBox" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 689.0
margin_top = 155.0
margin_right = 743.0
margin_bottom = 204.0
size_flags_horizontal = 4

[node name="LabelFpsLimit" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_top = 210.0
margin_right = 475.0
margin_bottom = 255.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_FPS_LIMIT"

[node name="FpsLimit" type="SpinBox" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 479.0
margin_top = 208.0
margin_right = 954.0
margin_bottom = 257.0
min_value = 15.0
max_value = 300.0
value = 15.0
allow_greater = true
align = 1
suffix = "FPS"

[node name="Label25" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
margin_top = 261.0
margin_right = 475.0
margin_bottom = 306.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 0.501961 )
custom_fonts/font = ExtResource( 3 )
text = "MENU_DETAIL_SETTINGS"
valign = 1

[node name="Label26" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
margin_left = 479.0
margin_top = 261.0
margin_right = 954.0
margin_bottom = 306.0
size_flags_horizontal = 3

[node name="Label6" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
margin_top = 312.0
margin_right = 475.0
margin_bottom = 357.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_ANTI_ALIASING"

[node name="AntiAliasing" type="OptionButton" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 479.0
margin_top = 310.0
margin_right = 954.0
margin_bottom = 359.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Disabled"
align = 1
items = [ "Disabled", null, false, 0, null, "2x", null, false, 1, null, "4x", null, false, 2, null, "8x", null, false, 3, null, "16x", null, false, 4, null ]
selected = 0

[node name="Label2" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
margin_top = 365.0
margin_right = 475.0
margin_bottom = 410.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_SHADOWS"

[node name="Shadows" type="CheckBox" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 689.0
margin_top = 363.0
margin_right = 743.0
margin_bottom = 412.0
size_flags_horizontal = 4
align = 1

[node name="Label12" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
margin_top = 418.0
margin_right = 475.0
margin_bottom = 463.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_DYNAMIC_LIGHTS"

[node name="DynamicLights" type="CheckBox" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 689.0
margin_top = 416.0
margin_right = 743.0
margin_bottom = 465.0
size_flags_horizontal = 4
align = 1

[node name="Label8" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
margin_top = 471.0
margin_right = 475.0
margin_bottom = 516.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_FOG"

[node name="Fog" type="CheckBox" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 689.0
margin_top = 469.0
margin_right = 743.0
margin_bottom = 518.0
size_flags_horizontal = 4
align = 1

[node name="MENU_AUDIO_SETTINGS" type="ScrollContainer" parent="JSettings/MarginContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 63.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_AUDIO_SETTINGS"]
margin_right = 964.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Label3" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_AUDIO_SETTINGS/GridContainer"]
margin_right = 480.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_MAIN_VOLUME"

[node name="MainVolume" type="HSlider" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_AUDIO_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 484.0
margin_right = 964.0
margin_bottom = 45.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_AUDIO_SETTINGS/GridContainer"]
margin_top = 49.0
margin_right = 480.0
margin_bottom = 94.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_GAME_VOLUME"

[node name="GameVolume" type="HSlider" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_AUDIO_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 484.0
margin_top = 49.0
margin_right = 964.0
margin_bottom = 94.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_AUDIO_SETTINGS/GridContainer"]
margin_top = 98.0
margin_right = 480.0
margin_bottom = 143.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_MUSIC_VOLUME"

[node name="MusicVolume" type="HSlider" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_AUDIO_SETTINGS/GridContainer"]
unique_name_in_owner = true
margin_left = 484.0
margin_top = 98.0
margin_right = 964.0
margin_bottom = 143.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MENU_INPUT_SETTINGS" type="ScrollContainer" parent="JSettings/MarginContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 63.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_INPUT_SETTINGS"]
margin_right = 964.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Back" type="Button" parent="JSettings/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 497.0
margin_right = 972.0
margin_bottom = 546.0
rect_min_size = Vector2( 150, 0 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "MENU_BACK"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer/Language" to="." method="_on_Language_item_selected"]
[connection signal="pressed" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer/Persons" to="." method="_on_Persons_pressed"]
[connection signal="value_changed" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer/ViewDistance" to="." method="set_view_distance"]
[connection signal="value_changed" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer/ChunkUnloadDistance" to="." method="set_chunk_unload_distance"]
[connection signal="toggled" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer/ChunkLoadAll" to="." method="set_chunk_load_all"]
[connection signal="pressed" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer/PZB" to="." method="_on_PZB_pressed"]
[connection signal="pressed" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_GENERAL_SETTINGS/GridContainer/SIFA" to="." method="_on_SIFA_pressed"]
[connection signal="pressed" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer/Vsync" to="." method="_on_Vsync_pressed"]
[connection signal="toggled" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer/FpsLimitToggle" to="." method="_on_FpsLimitToggle_toggled"]
[connection signal="value_changed" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer/FpsLimit" to="." method="set_fps_limit"]
[connection signal="item_selected" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer/AntiAliasing" to="." method="set_anti_aliasing"]
[connection signal="pressed" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer/Shadows" to="." method="_on_Shadows_pressed"]
[connection signal="pressed" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer/DynamicLights" to="." method="_on_DynamicLights_pressed"]
[connection signal="pressed" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_VISUAL_SETTINGS/GridContainer/Fog" to="." method="_on_Fog_pressed"]
[connection signal="value_changed" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_AUDIO_SETTINGS/GridContainer/MainVolume" to="." method="set_main_volume"]
[connection signal="value_changed" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_AUDIO_SETTINGS/GridContainer/GameVolume" to="." method="set_game_volume"]
[connection signal="value_changed" from="JSettings/MarginContainer/VBoxContainer/TabContainer/MENU_AUDIO_SETTINGS/GridContainer/MusicVolume" to="." method="set_music_volume"]
[connection signal="pressed" from="JSettings/MarginContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
